# poc-data-validation

./: pyproject.toml
src/: df_models.py  main.py
src/data/: input_data.csv  output_data.xlsx
